added cards and design of cards

--- a/www/index.html
+++ b/www/index.html
@@ -67,40 +67,160 @@
     <div id="container" class="swipe">
         <div class="swipe-wrap">
             <div id="new-uploads">
-                These are the new uploads <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla massa risus, ac viverra est condimentum eu. Donec ac volutpat libero. Nullam vel efficitur libero, sed iaculis mi. Sed magna nibh, aliquet ut tristique nec, ullamcorper eget dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor dui condimentum sapien iaculis, eu rutrum velit posuere. Etiam quis est eros. Aenean nec viverra augue. Donec tincidunt, purus ut laoreet commodo, nisi elit bibendum nisi, quis vulputate risus lacus vel nisl. Sed non lacinia urna. Suspendisse feugiat massa vitae libero tempor auctor sollicitudin sed orci. Nulla ut ornare massa. Nunc et erat et lacus placerat tincidunt sit amet ac odio. In vitae dignissim sem. Etiam egestas aliquet nisi molestie ultrices.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at bibendum est, eget posuere orci. Nam luctus, velit ac convallis gravida, libero nisl finibus purus, et faucibus augue quam eget risus. Vestibulum mattis enim vel consequat posuere. Curabitur consequat aliquam sodales. Pellentesque ligula est, ultricies sit amet varius sit amet, scelerisque sed erat. Quisque malesuada lorem in faucibus iaculis.
-
-Maecenas posuere massa quis lacus dignissim, euismod porta dolor porttitor. Duis bibendum ultrices tortor vel efficitur. In viverra vehicula volutpat. Praesent vulputate fringilla diam eget posuere. Quisque interdum massa id lorem lobortis, in porttitor nibh fermentum. Ut placerat, quam eu bibendum posuere, arcu sem vestibulum quam, eget posuere dolor dolor nec elit. Maecenas efficitur eros nec risus lacinia, vel consequat nunc sollicitudin.
-
-Nam posuere sapien odio, vel congue sapien faucibus at. Nulla commodo leo consequat, ultrices nisi ac, elementum lorem. Morbi feugiat eu tortor a congue. Aenean sed ante vel nisl malesuada tempor. Sed blandit justo tortor, quis pulvinar tortor eleifend sit amet. Nunc feugiat eros non sem ornare congue. Mauris aliquet non ligula non mollis. Nullam dignissim ipsum ut enim scelerisque, nec luctus nunc facilisis. Nulla quis ipsum quis sem efficitur efficitur. Integer vel cursus lectus. Morbi a pulvinar leo, eget posuere urna. Phasellus fringilla tincidunt pretium.
-
-Nunc sit amet tempor lacus. Aliquam sed tristique quam. Praesent aliquet, ex ac sagittis luctus, metus leo aliquet lacus, a vulputate tortor felis at tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque placerat, odio sed volutpat feugiat, metus nibh maximus tortor, ac ullamcorper dolor ipsum eu leo. Aliquam quis dolor dignissim, congue sem eget, semper dui. Nullam in neque sem. Nam convallis eget dolor vitae hendrerit. Donec faucibus iaculis gravida. Maecenas sed tempor diam. Quisque sodales eros eu turpis volutpat placerat. Aenean imperdiet mollis nisi, in fermentum metus aliquam sit amet. Cras eleifend augue eget mollis accumsan. Suspendisse venenatis tortor sed sem blandit, sed vehicula justo suscipit. Fusce turpis diam, porttitor eget pretium non, placerat id arcu.
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
             </div>
             <div id="hot-uploads">
-                These are the hot uploads.<br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla massa risus, ac viverra est condimentum eu. Donec ac volutpat libero. Nullam vel efficitur libero, sed iaculis mi. Sed magna nibh, aliquet ut tristique nec, ullamcorper eget dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor dui condimentum sapien iaculis, eu rutrum velit posuere. Etiam quis est eros. Aenean nec viverra augue. Donec tincidunt, purus ut laoreet commodo, nisi elit bibendum nisi, quis vulputate risus lacus vel nisl. Sed non lacinia urna. Suspendisse feugiat massa vitae libero tempor auctor sollicitudin sed orci. Nulla ut ornare massa. Nunc et erat et lacus placerat tincidunt sit amet ac odio. In vitae dignissim sem. Etiam egestas aliquet nisi molestie ultrices.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at bibendum est, eget posuere orci. Nam luctus, velit ac convallis gravida, libero nisl finibus purus, et faucibus augue quam eget risus. Vestibulum mattis enim vel consequat posuere. Curabitur consequat aliquam sodales. Pellentesque ligula est, ultricies sit amet varius sit amet, scelerisque sed erat. Quisque malesuada lorem in faucibus iaculis.
-
-Maecenas posuere massa quis lacus dignissim, euismod porta dolor porttitor. Duis bibendum ultrices tortor vel efficitur. In viverra vehicula volutpat. Praesent vulputate fringilla diam eget posuere. Quisque interdum massa id lorem lobortis, in porttitor nibh fermentum. Ut placerat, quam eu bibendum posuere, arcu sem vestibulum quam, eget posuere dolor dolor nec elit. Maecenas efficitur eros nec risus lacinia, vel consequat nunc sollicitudin.
-
-Nam posuere sapien odio, vel congue sapien faucibus at. Nulla commodo leo consequat, ultrices nisi ac, elementum lorem. Morbi feugiat eu tortor a congue. Aenean sed ante vel nisl malesuada tempor. Sed blandit justo tortor, quis pulvinar tortor eleifend sit amet. Nunc feugiat eros non sem ornare congue. Mauris aliquet non ligula non mollis. Nullam dignissim ipsum ut enim scelerisque, nec luctus nunc facilisis. Nulla quis ipsum quis sem efficitur efficitur. Integer vel cursus lectus. Morbi a pulvinar leo, eget posuere urna. Phasellus fringilla tincidunt pretium.
-
-Nunc sit amet tempor lacus. Aliquam sed tristique quam. Praesent aliquet, ex ac sagittis luctus, metus leo aliquet lacus, a vulputate tortor felis at tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque placerat, odio sed volutpat feugiat, metus nibh maximus tortor, ac ullamcorper dolor ipsum eu leo. Aliquam quis dolor dignissim, congue sem eget, semper dui. Nullam in neque sem. Nam convallis eget dolor vitae hendrerit. Donec faucibus iaculis gravida. Maecenas sed tempor diam. Quisque sodales eros eu turpis volutpat placerat. Aenean imperdiet mollis nisi, in fermentum metus aliquam sit amet. Cras eleifend augue eget mollis accumsan. Suspendisse venenatis tortor sed sem blandit, sed vehicula justo suscipit. Fusce turpis diam, porttitor eget pretium non, placerat id arcu.
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
             </div>
             <div id="flash-uploads">
-                These are the flash uploads. <br/>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla massa risus, ac viverra est condimentum eu. Donec ac volutpat libero. Nullam vel efficitur libero, sed iaculis mi. Sed magna nibh, aliquet ut tristique nec, ullamcorper eget dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor dui condimentum sapien iaculis, eu rutrum velit posuere. Etiam quis est eros. Aenean nec viverra augue. Donec tincidunt, purus ut laoreet commodo, nisi elit bibendum nisi, quis vulputate risus lacus vel nisl. Sed non lacinia urna. Suspendisse feugiat massa vitae libero tempor auctor sollicitudin sed orci. Nulla ut ornare massa. Nunc et erat et lacus placerat tincidunt sit amet ac odio. In vitae dignissim sem. Etiam egestas aliquet nisi molestie ultrices.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at bibendum est, eget posuere orci. Nam luctus, velit ac convallis gravida, libero nisl finibus purus, et faucibus augue quam eget risus. Vestibulum mattis enim vel consequat posuere. Curabitur consequat aliquam sodales. Pellentesque ligula est, ultricies sit amet varius sit amet, scelerisque sed erat. Quisque malesuada lorem in faucibus iaculis.
-
-Maecenas posuere massa quis lacus dignissim, euismod porta dolor porttitor. Duis bibendum ultrices tortor vel efficitur. In viverra vehicula volutpat. Praesent vulputate fringilla diam eget posuere. Quisque interdum massa id lorem lobortis, in porttitor nibh fermentum. Ut placerat, quam eu bibendum posuere, arcu sem vestibulum quam, eget posuere dolor dolor nec elit. Maecenas efficitur eros nec risus lacinia, vel consequat nunc sollicitudin.
-
-Nam posuere sapien odio, vel congue sapien faucibus at. Nulla commodo leo consequat, ultrices nisi ac, elementum lorem. Morbi feugiat eu tortor a congue. Aenean sed ante vel nisl malesuada tempor. Sed blandit justo tortor, quis pulvinar tortor eleifend sit amet. Nunc feugiat eros non sem ornare congue. Mauris aliquet non ligula non mollis. Nullam dignissim ipsum ut enim scelerisque, nec luctus nunc facilisis. Nulla quis ipsum quis sem efficitur efficitur. Integer vel cursus lectus. Morbi a pulvinar leo, eget posuere urna. Phasellus fringilla tincidunt pretium.
-
-Nunc sit amet tempor lacus. Aliquam sed tristique quam. Praesent aliquet, ex ac sagittis luctus, metus leo aliquet lacus, a vulputate tortor felis at tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque placerat, odio sed volutpat feugiat, metus nibh maximus tortor, ac ullamcorper dolor ipsum eu leo. Aliquam quis dolor dignissim, congue sem eget, semper dui. Nullam in neque sem. Nam convallis eget dolor vitae hendrerit. Donec faucibus iaculis gravida. Maecenas sed tempor diam. Quisque sodales eros eu turpis volutpat placerat. Aenean imperdiet mollis nisi, in fermentum metus aliquam sit amet. Cras eleifend augue eget mollis accumsan. Suspendisse venenatis tortor sed sem blandit, sed vehicula justo suscipit. Fusce turpis diam, porttitor eget pretium non, placerat id arcu.
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
+                <div id="card-wrapper">
+                    <div id="card-header">
+                        <span><h4>Inzending Titel hier</h4>
+                        <h6>999,999 punten/points</h6></span>
+                        <li class="fa fa-ellipsis-v"></li>
+                    </div>
+                    <div id="card-image-wrapper">
+                        <img src="img/stock-image.jpg" />
+                    </div>
+                    <div id="card-interaction">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-share-alt"></li>
+                        <li class="fa fa-flag"></li>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
